Fix wrapping in footer

--- a/wiki/src/local.css
+++ b/wiki/src/local.css
@@ -109,8 +109,9 @@ p + p, table + p {
   margin-top: 18px;
 }
 
-ol, ul {
-  padding-left: 30px;
+#pagebody ol, #pagebody ul {
+  padding: 0;
+  margin-left: 1.5em;
 }
 
 .remove-extra-space {
